<resources>
    <string name="app_name">Pico Botella</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- SPLASH FRAGMENT STRINGS -->
    <string name="hello_blank_fragment">Soy el fragment HOME</string>
    <string name="goToHome">Ir al Home</string>
    <string name="SplashTitle">Pico Botella</string>

    <!-- TOOL BAR STRINGS -->
    <string name="Toolbar_AddButtom">Agregar</string>

    <!-- HOME FRAGMENT STRINGS -->
    <string name="Home_Press_Buttom">Presioname</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="volver">Volver</string>
    <string name="app_icon_desc">Icono de la aplicación</string>
    <string name="califica_esta_app">Califica esta app</string>
    <string name="comparte_tu_opinion">Comparte tu opinión con otros usuarios</string>
    <string name="escribe_una_opinion">Escribe una opinión</string>
    <string name="enviar_calificacion">Enviar calificación</string>
    <string name="reglas_del_juego">Reglas del Juego</string>
    <string name="como_se_juega_titulo">¿Cómo se juega?</string>
    <string name="como_se_juega_descripcion">Los jugadores forman un círculo y en el centro colocan el dispositivo móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.</string>
    <string name="quien_gana_titulo">¿Quién gana?</string>
    <string name="quien_gana_descripcion">Gana el último jugador que no abandone el juego.</string>

    <!-- CHALLENGE MANAGEMENT STRINGS (HU6 / HU7 / HU8 / HU9) -->
    <string name="manage_challenges_title">Retos</string>
    <string name="no_challenges_yet">Aún no hay retos. Toca + para agregar uno.</string>
    <string name="add_challenge">Agregar reto</string>
    <string name="edit_challenge">Editar reto</string>
    <string name="delete_challenge">Eliminar reto</string>
    <string name="add_challenge_title">Agregar reto</string>
    <string name="edit_challenge_title">Editar reto</string>
    <string name="challenge_hint">Escriba el reto</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="challenge_empty_error">El texto del reto no puede estar vacío</string>
    <string name="back">Volver</string>
    <string name="delete_challenge_title">¿Desea eliminar el siguiente reto?:</string>
    <string name="delete_confirm_no">NO</string>
    <string name="delete_confirm_yes">SI</string>

    <!-- CHALLENGE RESULT DIALOG STRINGS (HU12) -->
    <string name="close">Cerrar</string>
    <string name="pokemon_image_desc">Imagen de un Pokémon aleatorio</string>
    <string name="no_challenges_available">No hay retos disponibles. ¡Crea algunos en el gestor!</string>
</resources>